--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -11,15 +11,32 @@
   --color-brown-950: hsl(25, 47%, 15%);
   --color-brown-400: hsl(28, 10%, 53%);
   --color-red-100: hsl(26, 66%, 93%);
-}
 
+  --animate-wiggle: wiggle-custom 0.5s ease-in-out;
+
+  @keyframes wiggle-custom {
+    0% {
+      transform: translateX(5%);
+    }
+    50% {
+      transform: translateX(-5%);
+    }
+
+    100% {
+      transform: translateX(0%);
+    }
+  }
+}
 @layer base {
   body {
     font-family: "DM Sans", sans-serif;
     @apply text-brown-400 text-[18px] font-normal antialiased;
   }
-}
 
+  .tooltip {
+    @apply group-hocus:opacity-100 group-hocus:visible bg-brown-950 invisible absolute bottom-full left-1/2 mb-3 -translate-x-1/2 rounded-lg p-2 whitespace-nowrap text-white opacity-50 transition-[opacity];
+  }
+}
 @layer components {
   .histogram-element {
     @apply relative h-2 w-full max-w-2xl rounded-sm bg-red-500 opacity-65 transition-all duration-500;
